--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 
   <title>Aprender IA para ganar dinero — Guías prácticas</title>
   <meta id="meta-description" name="description" content="Guías sencillas y prácticas para aprender inteligencia artificial y aplicarla para generar ingresos reales, paso a paso." />
-  <link id="canonical" rel="canonical" href="/" />
+  <link rel="canonical" href="https://lighthearted-jelly-299957.netlify.app/" />
+
 
   <!-- Schema básico -->
   <script type="application/ld+json">
@@ -19,7 +20,7 @@
   }
   </script>
 
-  <link rel="stylesheet" href="/css/styles.css" />
+  
 
   <!-- AdSense (PEGAR AQUÍ cuando tengas el ID) -->
   <!--
@@ -29,6 +30,6 @@
 </head>
 <body>
   <div id="main"></div>
-  <script src="/js/render.js"></script>
+  <script src="render.js"></script>
 </body>
 </html>
