--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
   <title>Aprender IA para ganar dinero — Guías prácticas</title>
   <meta id="meta-description" name="description" content="Guías sencillas y prácticas para aprender inteligencia artificial y aplicarla para generar ingresos reales, paso a paso." />
+  <p>Aprender IA desde cero para generar ingresos online con guías prácticas y sencillas.</p>
   <link rel="canonical" href="https://lighthearted-jelly-299957.netlify.app/" />
 
 
