--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="style.css">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-
+  <div class="robot">🤖</div>
   <title>Aprender IA para ganar dinero — Guías prácticas</title>
   <meta id="meta-description" name="description" content="Guías sencillas y prácticas para aprender inteligencia artificial y aplicarla para generar ingresos reales, paso a paso." />
   <p>Aprender IA desde cero para generar ingresos online con guías prácticas y sencillas.</p>
