--- a/index.html
+++ b/index.html
@@ -28,7 +28,87 @@
   <!--
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-TU_ID"
      crossorigin="anonymous"></script>
-  -->
+  --><style>
+  body {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+    background: #f8fafc;
+    color: #0f172a;
+    margin: 0;
+    padding: 0;
+  }
+
+  .container {
+    max-width: 900px;
+    margin: auto;
+    padding: 60px 20px;
+  }
+    <div class="container">
+  <span class="badge">🤖 Inteligencia Artificial práctica</span>
+
+  <h1>Aprender IA para ganar dinero</h1>
+  <p>
+    Guías prácticas y sencillas para empezar con inteligencia artificial
+    y convertir el conocimiento en ingresos reales.
+  </p>
+
+  <h2>Primeros pasos</h2>
+  <ul>
+    <li>Qué es la IA y cómo usarla sin conocimientos técnicos</li>
+    <li>Herramientas simples para empezar hoy</li>
+    <li>Formas reales de monetizar con IA</li>
+  </ul>
+
+  <h2>Cómo ganar dinero con IA</h2>
+  <p>
+    Descubre ideas probadas para generar ingresos: servicios, automatizaciones,
+    afiliación y creación de contenido apoyado por IA.
+  </p>
+
+  <footer>
+    © 2026 · Aprender IA para ganar dinero · Contenido en construcción
+  </footer>
+</div>
+
+
+  h1 {
+    font-size: 2.6rem;
+    margin-bottom: 10px;
+  }
+
+  h2 {
+    margin-top: 50px;
+    font-size: 1.6rem;
+  }
+
+  p {
+    font-size: 1.05rem;
+    line-height: 1.6;
+    color: #334155;
+  }
+
+  .badge {
+    display: inline-block;
+    background: #e0f2fe;
+    color: #0369a1;
+    padding: 6px 12px;
+    border-radius: 20px;
+    font-size: 0.85rem;
+    margin-bottom: 20px;
+  }
+
+  ul {
+    padding-left: 18px;
+  }
+
+  footer {
+    margin-top: 80px;
+    padding-top: 30px;
+    border-top: 1px solid #e2e8f0;
+    font-size: 0.9rem;
+    color: #64748b;
+  }
+</style>
+
 </head>
 <body>
   <div id="main"></div>
