--- a/index.html
+++ b/index.html
@@ -1,117 +1,151 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <link rel="stylesheet" href="style.css">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <div class="robot">🤖</div>
-  <title>Aprender IA para ganar dinero — Guías prácticas</title>
-  <meta id="meta-description" name="description" content="Guías sencillas y prácticas para aprender inteligencia artificial y aplicarla para generar ingresos reales, paso a paso." />
-  <p>Aprender IA desde cero para generar ingresos online con guías prácticas y sencillas.</p>
-  <link rel="canonical" href="https://lighthearted-jelly-299957.netlify.app/" />
 
+  <title>Aprender IA para ganar dinero — Guías prácticas</title>
+
+  <meta
+    name="description"
+    content="Guías sencillas y prácticas para aprender inteligencia artificial y aplicarla para generar ingresos reales, paso a paso."
+  />
+
+  <link rel="canonical" href="https://lighthearted-jelly-299957.netlify.app/" />
 
   <!-- Schema básico -->
   <script type="application/ld+json">
   {
-    "@context":"https://schema.org",
-    "@type":"WebSite",
-    "name":"AprenderIA",
-    "url":"https://TU-DOMINIO.com/",
-    "description":"Guías para aprender IA y ganar dinero, paso a paso."
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "AprenderIA",
+    "url": "https://lighthearted-jelly-299957.netlify.app/",
+    "description": "Guías para aprender IA y ganar dinero, paso a paso."
   }
   </script>
 
-  
-
-  <!-- AdSense (PEGAR AQUÍ cuando tengas el ID) -->
+  <!-- Google AdSense (ACTIVAR CUANDO TENGAS EL ID) -->
   <!--
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-TU_ID"
      crossorigin="anonymous"></script>
-  --><style>
-  body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-    background: #f8fafc;
-    color: #0f172a;
-    margin: 0;
-    padding: 0;
-  }
+  -->
 
-  .container {
-    max-width: 900px;
-    margin: auto;
-    padding: 60px 20px;
-  }
-    <div class="container">
-  <span class="badge">🤖 Inteligencia Artificial práctica</span>
+  <!-- ESTILOS -->
+  <style>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+      background: #f8fafc;
+      color: #0f172a;
+      margin: 0;
+      padding: 0;
+    }
 
-  <h1>Aprender IA para ganar dinero</h1>
-  <p>
-    Guías prácticas y sencillas para empezar con inteligencia artificial
-    y convertir el conocimiento en ingresos reales.
-  </p>
+    .container {
+      max-width: 900px;
+      margin: auto;
+      padding: 70px 20px;
+      text-align: center;
+    }
 
-  <h2>Primeros pasos</h2>
-  <ul>
-    <li>Qué es la IA y cómo usarla sin conocimientos técnicos</li>
-    <li>Herramientas simples para empezar hoy</li>
-    <li>Formas reales de monetizar con IA</li>
-  </ul>
+    .robot {
+      font-size: 4rem;
+      margin-bottom: 20px;
+    }
 
-  <h2>Cómo ganar dinero con IA</h2>
-  <p>
-    Descubre ideas probadas para generar ingresos: servicios, automatizaciones,
-    afiliación y creación de contenido apoyado por IA.
-  </p>
+    .badge {
+      display: inline-block;
+      background: #e0f2fe;
+      color: #0369a1;
+      padding: 6px 14px;
+      border-radius: 20px;
+      font-size: 0.85rem;
+      margin-bottom: 25px;
+    }
 
-  <footer>
-    © 2026 · Aprender IA para ganar dinero · Contenido en construcción
-  </footer>
-</div>
+    h1 {
+      font-size: 2.6rem;
+      margin-bottom: 15px;
+    }
 
+    h2 {
+      margin-top: 50px;
+      font-size: 1.6rem;
+    }
 
-  h1 {
-    font-size: 2.6rem;
-    margin-bottom: 10px;
-  }
+    p {
+      font-size: 1.05rem;
+      line-height: 1.6;
+      color: #334155;
+      max-width: 700px;
+      margin: 0 auto 20px;
+    }
 
-  h2 {
-    margin-top: 50px;
-    font-size: 1.6rem;
-  }
+    ul {
+      list-style: none;
+      padding: 0;
+      max-width: 600px;
+      margin: 0 auto;
+      text-align: left;
+    }
 
-  p {
-    font-size: 1.05rem;
-    line-height: 1.6;
-    color: #334155;
-  }
+    ul li {
+      padding-left: 24px;
+      margin-bottom: 10px;
+      position: relative;
+    }
 
-  .badge {
-    display: inline-block;
-    background: #e0f2fe;
-    color: #0369a1;
-    padding: 6px 12px;
-    border-radius: 20px;
-    font-size: 0.85rem;
-    margin-bottom: 20px;
-  }
+    ul li::before {
+      content: "✓";
+      position: absolute;
+      left: 0;
+      color: #2563eb;
+      font-weight: bold;
+    }
 
-  ul {
-    padding-left: 18px;
-  }
-
-  footer {
-    margin-top: 80px;
-    padding-top: 30px;
-    border-top: 1px solid #e2e8f0;
-    font-size: 0.9rem;
-    color: #64748b;
-  }
-</style>
-
+    footer {
+      margin-top: 80px;
+      padding-top: 30px;
+      border-top: 1px solid #e2e8f0;
+      font-size: 0.9rem;
+      color: #64748b;
+    }
+  </style>
 </head>
+
 <body>
-  <div id="main"></div>
+
+  <div class="container">
+    <div class="robot">🤖</div>
+
+    <span class="badge">Inteligencia Artificial práctica</span>
+
+    <h1>Aprender IA para ganar dinero</h1>
+
+    <p>
+      Guías prácticas y sencillas para empezar con inteligencia artificial
+      y convertir el conocimiento en ingresos reales, paso a paso.
+    </p>
+
+    <h2>Primeros pasos</h2>
+    <ul>
+      <li>Qué es la IA y cómo usarla sin conocimientos técnicos</li>
+      <li>Herramientas simples para empezar hoy mismo</li>
+      <li>Formas reales y honestas de monetizar con IA</li>
+    </ul>
+
+    <h2>Cómo ganar dinero con IA</h2>
+    <p>
+      Aprende a aplicar la IA en servicios, automatizaciones,
+      afiliación y creación de contenido sin humo ni promesas falsas.
+    </p>
+
+    <footer>
+      © 2026 · Aprender IA para ganar dinero · Contenido en construcción
+    </footer>
+  </div>
+
+  <!-- JS (por ahora NO hace nada crítico) -->
   <script src="render.js"></script>
+
 </body>
 </html>
