--- a/index.html
+++ b/index.html
@@ -5,12 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <title>Aprender IA para ganar dinero — Guías prácticas</title>
-
-  <meta
-    name="description"
-    content="Guías sencillas y prácticas para aprender inteligencia artificial y aplicarla para generar ingresos reales, paso a paso."
-  />
-
+  <meta name="description" content="Aprende inteligencia artificial de forma práctica y conviértela en ingresos reales. Guías claras, sin humo, paso a paso." />
   <link rel="canonical" href="https://lighthearted-jelly-299957.netlify.app/" />
 
   <!-- Schema básico -->
@@ -20,132 +15,75 @@
     "@type": "WebSite",
     "name": "AprenderIA",
     "url": "https://lighthearted-jelly-299957.netlify.app/",
-    "description": "Guías para aprender IA y ganar dinero, paso a paso."
+    "description": "Guías prácticas para aprender IA y generar ingresos reales."
   }
   </script>
 
-  <!-- Google AdSense (ACTIVAR CUANDO TENGAS EL ID) -->
+  <!-- AdSense (activar cuando tengas el ID) -->
   <!--
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-TU_ID"
      crossorigin="anonymous"></script>
   -->
 
-  <!-- ESTILOS -->
-  <style>
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-      background: #f8fafc;
-      color: #0f172a;
-      margin: 0;
-      padding: 0;
-    }
-
-    .container {
-      max-width: 900px;
-      margin: auto;
-      padding: 70px 20px;
-      text-align: center;
-    }
-
-    .robot {
-      font-size: 4rem;
-      margin-bottom: 20px;
-    }
-
-    .badge {
-      display: inline-block;
-      background: #e0f2fe;
-      color: #0369a1;
-      padding: 6px 14px;
-      border-radius: 20px;
-      font-size: 0.85rem;
-      margin-bottom: 25px;
-    }
-
-    h1 {
-      font-size: 2.6rem;
-      margin-bottom: 15px;
-    }
-
-    h2 {
-      margin-top: 50px;
-      font-size: 1.6rem;
-    }
-
-    p {
-      font-size: 1.05rem;
-      line-height: 1.6;
-      color: #334155;
-      max-width: 700px;
-      margin: 0 auto 20px;
-    }
-
-    ul {
-      list-style: none;
-      padding: 0;
-      max-width: 600px;
-      margin: 0 auto;
-      text-align: left;
-    }
-
-    ul li {
-      padding-left: 24px;
-      margin-bottom: 10px;
-      position: relative;
-    }
-
-    ul li::before {
-      content: "✓";
-      position: absolute;
-      left: 0;
-      color: #2563eb;
-      font-weight: bold;
-    }
-
-    footer {
-      margin-top: 80px;
-      padding-top: 30px;
-      border-top: 1px solid #e2e8f0;
-      font-size: 0.9rem;
-      color: #64748b;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
+  <header class="hero">
+    <div class="grid"></div>
+    <div class="container hero-content">
+      <div class="robot-core">
+        <div class="halo"></div>
+        <div class="robot">🤖</div>
+      </div>
+      <span class="badge">IA práctica · ingresos reales</span>
+      <h1>Aprender IA para ganar dinero</h1>
+      <p class="subtitle">
+        Guías claras y aplicables para usar inteligencia artificial sin conocimientos técnicos
+        y convertirla en ingresos reales, paso a paso.
+      </p>
+      <div class="cta">
+        <a href="#primeros-pasos" class="btn primary">Empezar ahora</a>
+        <a href="#como-ganar" class="btn ghost">Ver ideas reales</a>
+      </div>
+    </div>
+  </header>
 
-  <div class="container">
-    <div class="robot">🤖</div>
+  <main class="container">
+    <section id="primeros-pasos" class="card">
+      <h2>Primeros pasos</h2>
+      <ul class="checks">
+        <li>Qué es la IA y cómo usarla hoy mismo</li>
+        <li>Herramientas simples para empezar sin líos</li>
+        <li>Casos reales y ejemplos prácticos</li>
+      </ul>
+    </section>
 
-    <span class="badge">Inteligencia Artificial práctica</span>
+    <section id="como-ganar" class="card accent">
+      <h2>Cómo ganar dinero con IA</h2>
+      <p>
+        Servicios, automatizaciones, afiliación y creación de contenido apoyado por IA.
+        Sin promesas falsas. Métodos que escalan.
+      </p>
+      <ul class="checks">
+        <li>Servicios rápidos con ChatGPT y herramientas IA</li>
+        <li>Automatización de tareas que ahorran tiempo</li>
+        <li>Afiliación inteligente y contenido SEO</li>
+      </ul>
+    </section>
+  </main>
 
-    <h1>Aprender IA para ganar dinero</h1>
+  <footer class="footer">
+    <div class="container footer-inner">
+      <span>© 2026 · Aprender IA para ganar dinero</span>
+      <nav>
+        <a href="/privacy.html">Privacidad</a>
+        <a href="/cookies.html">Cookies</a>
+        <a href="/legal.html">Aviso legal</a>
+      </nav>
+    </div>
+  </footer>
 
-    <p>
-      Guías prácticas y sencillas para empezar con inteligencia artificial
-      y convertir el conocimiento en ingresos reales, paso a paso.
-    </p>
-
-    <h2>Primeros pasos</h2>
-    <ul>
-      <li>Qué es la IA y cómo usarla sin conocimientos técnicos</li>
-      <li>Herramientas simples para empezar hoy mismo</li>
-      <li>Formas reales y honestas de monetizar con IA</li>
-    </ul>
-
-    <h2>Cómo ganar dinero con IA</h2>
-    <p>
-      Aprende a aplicar la IA en servicios, automatizaciones,
-      afiliación y creación de contenido sin humo ni promesas falsas.
-    </p>
-
-    <footer>
-      © 2026 · Aprender IA para ganar dinero · Contenido en construcción
-    </footer>
-  </div>
-
-  <!-- JS (por ahora NO hace nada crítico) -->
   <script src="render.js"></script>
-
 </body>
 </html>
