--- a/index.html
+++ b/index.html
@@ -4,86 +4,77 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Aprender IA para ganar dinero — Guías prácticas</title>
-  <meta name="description" content="Aprende inteligencia artificial de forma práctica y conviértela en ingresos reales. Guías claras, sin humo, paso a paso." />
-  <link rel="canonical" href="https://lighthearted-jelly-299957.netlify.app/" />
+  <title>Aprender IA para ganar dinero | Guías prácticas</title>
+  <meta name="description" content="Aprende inteligencia artificial desde cero y conviértela en ingresos reales. Guías claras, prácticas y sin humo." />
 
-  <!-- Schema básico -->
+  <link rel="stylesheet" href="style.css">
+
+  <!-- SEO básico -->
+  <link rel="canonical" href="/" />
+
+  <!-- Schema -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "WebSite",
-    "name": "AprenderIA",
-    "url": "https://lighthearted-jelly-299957.netlify.app/",
-    "description": "Guías prácticas para aprender IA y generar ingresos reales."
+    "name": "Aprender IA para ganar dinero",
+    "description": "Guías prácticas para aprender IA y generar ingresos reales",
+    "inLanguage": "es"
   }
   </script>
-
-  <!-- AdSense (activar cuando tengas el ID) -->
-  <!--
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-TU_ID"
-     crossorigin="anonymous"></script>
-  -->
-
-  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-  <header class="hero">
-    <div class="grid"></div>
-    <div class="container hero-content">
-      <div class="robot-core">
-        <div class="halo"></div>
-        <div class="robot">🤖</div>
-      </div>
-      <span class="badge">IA práctica · ingresos reales</span>
-      <h1>Aprender IA para ganar dinero</h1>
-      <p class="subtitle">
-        Guías claras y aplicables para usar inteligencia artificial sin conocimientos técnicos
-        y convertirla en ingresos reales, paso a paso.
-      </p>
-      <div class="cta">
-        <a href="#primeros-pasos" class="btn primary">Empezar ahora</a>
-        <a href="#como-ganar" class="btn ghost">Ver ideas reales</a>
-      </div>
+
+  <main class="hero">
+    <div class="robot">🤖</div>
+
+    <span class="badge">IA práctica · ingresos reales</span>
+
+    <h1>Aprender IA para ganar dinero</h1>
+
+    <p class="subtitle">
+      Guías claras y aplicables para usar inteligencia artificial
+      <strong>sin conocimientos técnicos</strong> y convertirla en ingresos reales.
+    </p>
+
+    <div class="cta">
+      <a href="#primeros-pasos" class="btn primary">Empezar ahora</a>
+      <a href="#monetizar" class="btn secondary">Ver ideas reales</a>
     </div>
-  </header>
-
-  <main class="container">
-    <section id="primeros-pasos" class="card">
-      <h2>Primeros pasos</h2>
-      <ul class="checks">
-        <li>Qué es la IA y cómo usarla hoy mismo</li>
-        <li>Herramientas simples para empezar sin líos</li>
-        <li>Casos reales y ejemplos prácticos</li>
-      </ul>
-    </section>
-
-    <section id="como-ganar" class="card accent">
-      <h2>Cómo ganar dinero con IA</h2>
-      <p>
-        Servicios, automatizaciones, afiliación y creación de contenido apoyado por IA.
-        Sin promesas falsas. Métodos que escalan.
-      </p>
-      <ul class="checks">
-        <li>Servicios rápidos con ChatGPT y herramientas IA</li>
-        <li>Automatización de tareas que ahorran tiempo</li>
-        <li>Afiliación inteligente y contenido SEO</li>
-      </ul>
-    </section>
   </main>
 
-  <footer class="footer">
-    <div class="container footer-inner">
-      <span>© 2026 · Aprender IA para ganar dinero</span>
-      <nav>
-        <a href="/privacy.html">Privacidad</a>
-        <a href="/cookies.html">Cookies</a>
-        <a href="/legal.html">Aviso legal</a>
-      </nav>
-    </div>
+  <section id="primeros-pasos" class="section">
+    <h2>Primeros pasos</h2>
+
+    <ul class="checks">
+      <li>Qué es la IA y cómo usarla hoy mismo</li>
+      <li>Herramientas simples para empezar sin líos</li>
+      <li>Casos reales y ejemplos prácticos</li>
+    </ul>
+  </section>
+
+  <section id="monetizar" class="section dark">
+    <h2>Cómo ganar dinero con IA</h2>
+
+    <p>
+      Servicios, automatizaciones, afiliación y creación de contenido apoyado por IA.
+      <strong>Sin promesas falsas.</strong> Métodos que escalan.
+    </p>
+
+    <ul class="checks">
+      <li>Servicios rápidos con ChatGPT y herramientas IA</li>
+      <li>Automatización de tareas que ahorran tiempo</li>
+      <li>Afiliación inteligente y contenido SEO</li>
+    </ul>
+  </section>
+
+  <footer>
+    © 2026 · Aprender IA para ganar dinero ·
+    <a href="privacy.html">Privacidad</a> ·
+    <a href="cookies.html">Cookies</a> ·
+    <a href="legal.html">Aviso legal</a>
   </footer>
 
-  <script src="render.js"></script>
 </body>
 </html>
